<resources>
    <string name="app_name">Hexentanz</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="imageview_hexentanzPlaceholder">TODO</string>
    <string name="usernameHint">Username</string>
    <string name="buttonSend">Enter</string>
    <string name="inputEnter">Enter the game:</string>
    <string name="ageTextView">Age</string>
    <string name="welcome">Welcome</string>
    <string name="join_game">Join Game</string>
    <string name="new_game">New Game</string>
    <string name="name">Name</string>
    <string name="returnImgBtn">returnImageBtn</string>
    <string name="btnReturnLobby">returnBtnLobby</string>
    <string name="rules">Rules</string>
    <string name="textview">Players</string>
    <string name="start_game">Start Game</string>
    <string name="_8_players">/8 Players</string>
    <string name="txt_string">2.2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="würfel_btn">Würfel Button</string>
    <string name="continueButtonDiceFragment">Continue</string>
    <string name="winnderName">Gewinner</string>
    <string name="restartGame">Restart Game</string>
    <string name="winnerText">Der Gewinner ist: %1$s!</string>
    <string name="return_button">X</string>
    <string name="rules_text">Regelerklärung\n</string>
    <string name="cheatButton">Cheat\n</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="roll">Roll</string>
    <string name="dummyimg">DummyImg</string>
    <string name="hexentanz_rules">
        Hexentanz ist ein Brettspiel, bei dem die Spieler versuchen, ihre Hexenfiguren einmal um das Spielfeld zu bewegen und sicher in ihr Zuhause zu bringen. Zu Beginn des Spiels werden alle Hexen verdeckt, sodass ihre wahre Identität nur dem jeweiligen Spieler bekannt ist. Spieler bewegen ihre Figuren basierend auf Würfelwürfen, und es gibt spezielle Felder, die Figuren blockieren oder zurückwerfen können. Eine zentrale Herausforderung des Spiels ist es, sich zu merken, welche verdeckte Figur zu welchem Spieler gehört, da Figuren im Verlauf des Spiels oft verwechselt werden. Ziel ist es, als Erster alle eigenen Hexen ins Ziel zu bringen, wobei geschickte Täuschung und gutes Gedächtnis entscheidend sind.
    </string>
</resources>