<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby_Fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_dialog"
            android:contentDescription="@string/btnReturnLobby"
            tools:ignore="ContentDescription,HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="69dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_string"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/_8_players"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:text="@string/rules"
                tools:ignore="VisualLintBounds" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginStart="120dp"
            android:textSize="16sp"
            android:text="@string/start_game" />
    </LinearLayout>

</LinearLayout>