<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="297dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/hexentanz"
        android:paddingStart="100dp"
        android:contentDescription="@string/imageview_hexentanzPlaceholder"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/main1"
        android:layout_width="match_parent"
        android:layout_height="381dp"
        tools:context=".MainActivity"
        android:baselineAligned="false">


        <LinearLayout
            android:id="@+id/main2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"

            tools:context=".MainActivity"
            tools:ignore="UselessParent">


            <TextView
                android:id="@+id/txtView1"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="Enter the game:"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/startScreenUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:layout_marginLeft="100dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter text (3 to 25 characters)"
                android:maxLength="25"
                android:minHeight="48dp"
                android:text="@string/username"
                tools:ignore="LabelFor"
                android:paddingLeft="10dp"/>

            <EditText
                android:id="@+id/startScreenAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:layout_marginLeft="100dp"
                android:layout_marginBottom="35dp"
                android:paddingLeft="10dp"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/age"
                android:maxLength="3"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginLeft="150dp"
                android:text="Button" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>